Modify I2C0/I2C1 SDA/SCL multifunction pin settings
Change-Id: I7874e7edb677003bc5e0ca35406c72d6e1b85540

--- a/SampleCode/StdDriver/I2C_SingleByte_Master/KEIL/Nu_Link_Driver.ini
+++ b/SampleCode/StdDriver/I2C_SingleByte_Master/KEIL/Nu_Link_Driver.ini
@@ -1,12 +1,12 @@
 [Version]
 Nu_LinkVersion=V5.2
 [Process]
-ProcessID=0x00001e58
-ProcessCreationTime_L=0x0ac0b38f
-ProcessCreationTime_H=0x01d23ef3
-NuLinkID=0x1800007f
+ProcessID=0x00002a14
+ProcessCreationTime_L=0x18aa0598
+ProcessCreationTime_H=0x01d4d87e
+NuLinkID=0x1800158e
 NuLinkIDs_Count=0x00000001
-NuLinkID0=0x1800007f
+NuLinkID0=0x1800158e
 [ChipSelect]
 ;ChipName=<NUC1xx|NUC2xx|M05x|N571|N572|Nano100|N512|Mini51|NUC505|General>
 ChipName=NUC029
